<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="name_example">Рик</string>
    <string name="alive">Живой</string>
    <string name="type">Вид:</string>
    <string name="gender">Пол:</string>
    <string name="location">Местоположение</string>
    <string name="earth">Земля</string>
    <string name="man">мужской</string>
    <string name="human">человек</string>
    <string name="name_hero">Имя персонажа:</string>
    <string name="status">Статус:</string>
    <string name="man_ex2">Мужской</string>
    <string name="empty">TextView</string>
    <string name="heroes">Персонажи</string>
    <string name="locations">Локации</string>
    <string name="episodes">Эпизоды</string>
    <string name="search_ex">Поиск...</string>
    <string name="alive_ex">Alive</string>
    <string name="dead_ex">Dead</string>
    <string name="origin">Происхождение</string>
    <string name="tv_ex">TextView</string>
    <string name="error_parameters">Параметры не заданы</string>
    <string name="apply">Применить</string>
    <string name="filter">Фильтр</string>
    <string name="status_eng">Status</string>
    <string name="gender_eng">Gender</string>
    <string name="alive_eng">Alive</string>
    <string name="dead_eng">Dead</string>
    <string name="unknown_eng">Unknown</string>
    <string name="female_eng">Female</string>
    <string name="male_eng">Male</string>
    <string name="genderless_eng">Genderless</string>
    <string name="unknown">Unknown</string>
    <string name="human_eng">Human</string>
    <string name="alien_eng">Alien</string>
    <string name="humanoid_eng">Humanoid</string>
    <string name="robot_eng">Robot</string>
    <string name="poopybutthole_eng">Poopybutthole</string>
    <string name="mythological_eng">Mythological</string>
    <string name="animal_eng">Animal</string>
    <string name="cronenberg_eng">Cronenberg</string>
    <string name="disease_eng">Disease</string>
    <string name="inputName">Введите имя героя...</string>
    <string name="species">Species</string>
    <string name="ex_pilot">Pilot</string>
    <string name="number_episode">№ эпизода:</string>
    <string name="one">1</string>
    <string name="data_start">Дата релиза:</string>
    <string name="ex_data">12.08.2023</string>
    <string name="season">Сезон</string>
    <string name="episode">Серия</string>
    <string name="type_info">Тип:</string>
    <string name="demension">Измерение:</string>
    <string name="planet">Planet</string>
    <string name="cluster">Cluster</string>
    <string name="space_station">Space station</string>
    <string name="tv">TV</string>
    <string name="microverse">Microverse</string>
    <string name="resort">Resort</string>
    <string name="dream">Dream</string>
    <string name="fantasy_town">Fantasy town</string>
    <string name="menagerie">Menagerie</string>
    <string name="game">Game</string>
    <string name="customs">Customs</string>
    <string name="daycare">Daycare</string>
    <string name="type_ex">Type</string>
    <string name="dimension_c_137">Dimension C-137</string>
    <string name="post_apocalyptic_dimension">Post-Apocalyptic Dimension</string>
    <string name="replacement_dimension">Replacement Dimension</string>
    <string name="fantasy_dimension">Fantasy Dimension</string>
    <string name="dimension_5_126">Dimension 5-126</string>
    <string name="type_ex1">Тип</string>
    <string name="dimension_ex">Измерение</string>
    <string name="error_network">Отсутствует интернет соединение</string>
</resources>