<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_custom_filter">

    <TextView
        android:id="@+id/tvInfoFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:text="@string/filter"
        android:textSize="25sp"
        android:textStyle="bold"
        android:theme="@style/TextViewWhiteStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoDimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="Dimension"
        android:textSize="18sp"
        android:theme="@style/TextViewWhiteStyle"
        app:layout_constraintStart_toStartOf="@+id/tvInfoType"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <Button
        android:id="@+id/btnApply"
        style="@style/TextViewWhiteStyle"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_16"
        android:backgroundTint="#88226F"
        android:shadowColor="@color/black"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/dp_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
        app:layout_constraintVertical_bias="0.09"
        app:strokeColor="#000000" />

    <ImageView
        android:id="@+id/btnCloseDialog"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvInfoType"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_planet"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cluster"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cluster" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_space"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_station" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_tv"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_unknown_type"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_microverse"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/microverse" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_resort"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resort" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fantasy_town"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fantasy_town" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dream"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dream" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_menagerie"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menagerie" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_game"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_customs"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customs" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_daycare"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daycare" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvInfoType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/type_ex"
        android:textSize="18sp"
        android:theme="@style/TextViewWhiteStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoFilter" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoDimension">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_137"
                    style="@style/CustomChipStyle"
                    app:singleSelection="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension_c_137" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_apocaliptic"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_apocalyptic_dimension" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_replacement"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/replacement_dimension" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fantasy"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fantasy_dimension" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_5"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension_5_126" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_unknown_dimension"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>