<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/gradient_item">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imIconCharacter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:shapeAppearanceOverlay="@style/rounded_corner"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTypeInfo"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@+id/imIconCharacter"
        app:layout_constraintTop_toBottomOf="@+id/imIconCharacter" />

    <TextView
        android:id="@+id/tvStatusInfo"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@+id/tvTypeInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeInfo" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/tvStatusInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvStatusInfo" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_example"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSpecies"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/human"
        app:layout_constraintStart_toEndOf="@+id/tvTypeInfo"
        app:layout_constraintTop_toTopOf="@+id/tvTypeInfo" />

    <TextView
        android:id="@+id/tvStatus"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/alive"
        app:layout_constraintStart_toEndOf="@+id/tvStatusInfo"
        app:layout_constraintTop_toTopOf="@+id/tvStatusInfo" />

    <TextView
        android:id="@+id/tvGender"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/man_ex2"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>