<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:background="@drawable/gradient_item">

    <TextView
        android:id="@+id/tvTypeInfo"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/type_ex1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvNameLocation"
        app:layout_constraintStart_toStartOf="@+id/tvNameLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLocation" />

    <TextView
        android:id="@+id/tvDimensionInfo"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/dimension_ex"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTypeLocation"
        app:layout_constraintStart_toStartOf="@+id/tvTypeLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeLocation" />

    <TextView
        android:id="@+id/tvNameLocation"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/name_example"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTypeLocation"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:text="Planet"
        app:layout_constraintEnd_toEndOf="@+id/tvTypeInfo"
        app:layout_constraintStart_toStartOf="@+id/tvTypeInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeInfo" />

    <TextView
        android:id="@+id/tvDimension"
        style="@style/TextViewWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/unknown"
        app:layout_constraintEnd_toEndOf="@+id/tvDimensionInfo"
        app:layout_constraintStart_toStartOf="@+id/tvDimensionInfo"
        app:layout_constraintTop_toBottomOf="@+id/tvDimensionInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>